# quick-order

./: .env  .gitignore  DEPLOYMENT.md  INSTALL.md  PROJECT_PLAN.md  PROJECT_PLAN_EN.md  QUICK_START.md  README.md  SUCCESS.md  VIRTUAL_ENV_UPDATE.md  app.py  application.py  config.py  config_production.py  create_database.sql  database.py  deploy.sh  env.example  flask_test_report.md  gunicorn.conf.py  install.bat  nginx_shop.conf  pyproject.toml  requirements-simple.txt  requirements.txt  run.py  server_start.bat  server_start.ps1  setup_database.py  start.bat  start_app.bat  test_cart_api.py  test_database.py  test_environment.py  update_backend_users.py  update_products_template.py  wsgi.py
.cursor/rules/: python-rule.mdc  python.mdc
app/schemas/: base.py
models/: __init__.py  cart.py  order.py  product.py  store.py  user.py
routes/: api.py  backend.py  frontend.py
templates/: base.html
templates/backend/: create_product.html  create_store.html  create_user.html  dashboard.html  edit_product.html  edit_store.html  login.html  order_detail.html  orders.html  products.html  stores.html  users.html
templates/frontend/: cart.html  checkout.html  index.html  login.html  orders.html  product_detail.html  register.html  store_detail.html
utils/: image_utils.py
